Fix for overflowing topic titles.

--- a/core/app/assets/stylesheets/tour/interests.css.less
+++ b/core/app/assets/stylesheets/tour/interests.css.less
@@ -60,10 +60,12 @@
   position: relative;
 }
 
+@user-width: 200px;
+@user-height: 170px;
 .tour-interesting-user {
   margin: 20px;
-  width: 200px;
-  height: 170px;
+  width: @user-width;
+  height: @user-height;
   display: inline-block;
   cursor: pointer;
 
@@ -116,6 +118,8 @@
     position: absolute;
   }
 
+  @user-block-padding-horizontal: 15px;
+  @user-block-padding-vertical: 20px;
   .tour-follow-user-block {
     border: 1px solid @tableBorder;
     border-radius: 4px;
@@ -125,21 +129,10 @@
     //its container to make room for the jutting-out avatar.
     top: 24px; bottom: 0;
     left: 0; right: 0;
-    padding: 20px 0 0 15px;
+    padding: @user-block-padding-vertical 0 0 @user-block-padding-horizontal;
 
     //very subtle box-shadow.
     box-shadow: 0 2px 3px -3px rgba(0,0,0,0.5);
-  }
-
-  .tour-follow-user-authority {
-    color: @mutedFontColor;
-    margin-left: 15px;
-
-    > img {
-      margin-top: -2px;
-      width: 13px;
-      height: 12px;
-    }
   }
 
   .tour-follow-topic-heading {
@@ -161,6 +154,30 @@
     border: 2px solid @tableBorder;
     display: inline-block;
     background: white;
+
+    max-width: @user-width - 2*@user-block-padding-horizontal - 2px;
+    white-space: nowrap;
+    overflow: hidden;
+    display: inline-block;
+    text-overflow: ellipsis;
+    padding-right: 50px;
+  }
+
+  .tour-user-topic-title {
+    font-weight: bold;
+    margin-right: 15px;
+  }
+
+  .tour-user-topic-authority {
+    position: absolute;
+    right: 8px;
+    color: @mutedFontColor;
+
+    > img {
+      margin-top: -2px;
+      width: 13px;
+      height: 12px;
+    }
   }
 
   .tour-user-button-region > button {
